# mailing_management_service

./: .env.example  LICENSE  README.md  pyproject.toml
attempts/: admin.py  models.py
clients/: forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  permissions.py  services.py  urls.py  views.py  views_message.py
mailing/management/commands/: send_mailings.py
mailing/migrations/: 0001_initial.py  0002_mailingattempt_client_alter_mailing_owner.py  0003_alter_message_body_alter_message_subject.py  0004_alter_mailing_owner_alter_mailingattempt_client_and_more.py  0004_remove_mailingattempt_client_and_more.py  0005_alter_mailing_options.py
mailing/templates/: base.html
mailing/templates/includes/: inc_menu.html
mailing/templates/mailing/: attempt_list.html  base.html  client_confirm_delete.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  (+4 more)
mailing_messages/: apps.py  models.py  urls.py  views.py
mailing_messages/migrations/: 0001_initial.py
mailings/: forms.py  models.py  urls.py  views.py
mailings/templates/: base.html
messages/: models.py
templates/mailing/: client_confirm_delete.html  client_list.html
users/: admin.py  api.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_phone.py  0003_alter_customuser_country.py  0003_alter_customuser_phone.py  0003_auto_20250227_1204.py  0004_alter_customuser_username.py
(+7 files in other folders)
